@@ -5,6 +5,7 @@ aKregator ChangeLog
 Changes after 1.0b6:
 -----------------------------
 Changes:
+       - Show position of the tray icon with image in dialog when pressing the close button -tpr
        - Display proper error message when no feed found in add feed -tpr
        - make systray icon optional (Patch by Christof Musik,
        christof(at)freenet.de) -fo
